part2/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels: 
    app: app1
spec:
  selector:
    app: app1
  ports:
  - name:  app1-port
    protocol: TCP
    port:  80
    targetPort:  80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  labels:
    app: app3
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
