part2/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1     
kind: Ingress         
metadata:
  name: app1-ingress
  labels:
    name: app1
spec:
  rules:
  - host: app1.com           
    http:
      paths:
      - pathType: Prefix
        path: "/"                             
        backend:
          service:
            name: app1-service           
            port: 
              number: 80                 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
spec:
  rules:
    - host: app2.com
      http:
        paths:
          - pathType: Prefix 
            path: "/"
            backend:
              service:
                name: app2-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
spec:
  rules:
    - host: app3.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-default-ingress
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
